# dbus-ws-proxy

./: Cargo.toml  README.md  dbus-websocket-asyncapi.json  index.html
.github/workflows/: publish-asyncapi-doc.yml
deb/: dbus-ws-proxy.service
deb/scripts/: postinst  postrm  prerm
debian/: dbus-ws-proxy.user.service
js/: app.js
src/: error.rs  main.rs  message.rs  signal_handler.rs  state.rs  value.rs  web_socket_message_handler.rs
