[package]
name = "dbus-ws-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Anton Kharuzhyi <publicantroids@gmail.com>"]
license = "MIT OR Apache-2.0"
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]
description = "DBus - WebSocket proxy"
keywords = ["dbus", "d-bus", "websocket", "ws"]

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
clap = { version = "4.5.20", features = ["derive"] }
thiserror = "2.0.2"
tokio = { version = "1.41.1", features = ["macros", "rt", "rt-multi-thread", "tracing"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
log = "0.4.22"
serde = { version = "1.0.214", features = ["derive"] }
zbus = { version = "5.1.1", features = ["tokio"] }
zvariant = "5.1.0"
serde_json = "1.0.132"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
tokio-stream = "0.1.16"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "DBus - WebSocket proxy"
section = "admin"
priority = "optional"
assets = [
    ["target/release/dbus-ws-proxy", "usr/bin/dbus-ws-proxy", "755"],
    ["deb/dbus-ws-proxy.service", "/lib/systemd/system/dbus-ws-proxy.service", "644"],
]
maintainer-scripts = "deb/scripts"